--- a/departamento.html
+++ b/departamento.html
@@ -19,7 +19,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/detalle-producto.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <title>Document</title>
   </head>
   <body>
@@ -102,110 +102,20 @@
       </nav>
     </header>
     <div class="container">
-      <div class="container mt-3">
-        <nav
-          style="
-            --bs-breadcrumb-divider: url(
-              &#34;data:image/svg + xml,
-              %3Csvgxmlns='http://www.w3.org/2000/svg'width='8'height='8'%3E%3Cpathd='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z'fill='%236c757d'/%3E%3C/svg%3E&#34;
-            );
-          "
-          aria-label="breadcrumb"
-        >
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Productos</a></li>
-            <li class="breadcrumb-item"><a href="#">Categorias</a></li>
-            <li class="breadcrumb-item active" aria-current="page">
-              Detalles produtos
-            </li>
-          </ol>
-        </nav>
-      </div>
-
       <div class="row">
-        <div class="col-md-4">
-          <img
-            class="img-fluid"
-            src="img/Redken Extreme Shampoo - 1000ml.jpg"
-            alt=""
-          />
+        <div class="col-4">
+          <h1>hola</h1>
         </div>
-
-        <div class="col-md-8">
-          <h3 class="my-3">Redken Shampoo Extreme 300ml</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
-            euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem,
-            adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
-            justo eu convallis placerat, felis enim.
-          </p>
-          <h3 class="my-3">Project Details</h3>
-          <ul>
-            <li>Lorem Ipsum</li>
-            <li>Dolor Sit Amet</li>
-            <li>Consectetur</li>
-            <li>Adipiscing Elit</li>
-          </ul>
-          <div class="d-flex">
-            <span class="qty span-custum">Cantidad:</span>
-            <input
-              type="number"
-              name="quantity"
-              id="quantity"
-              value="1"
-              min="1"
-              max="9999"
-              class="title form-control w-25"
-            />
-            <button
-              name="button"
-              type="submit"
-              class="btn btn-danger btn-carrito"
-              id="add-to-cart-button"
-              data-confirmation-required="false"
-            >
-              Añadir al carrito
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <h3 class="my-4">Related Projects</h3>
-
-      <div class="row">
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img
-              class="img-fluid"
-              src="https://via.placeholder.com/500x300"
-              alt=""
-            />
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img
-              class="img-fluid"
-              src="https://via.placeholder.com/500x300"
-              alt=""
-            />
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img
-              class="img-fluid"
-              src="https://via.placeholder.com/500x300"
-              alt=""
-            />
-          </a>
+        <div class="col-8">
+          <h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+            odit facilis explicabo, illo soluta doloremque corrupti vel magnam
+            fugiat eius? Sint aliquid facilis quas suscipit nisi provident ex
+            magni tempora!
+          </h1>
         </div>
       </div>
     </div>
-
     <!-- footer -->
     <div class="container-footer">
       <div class="container">
